# rauthy-pam-nss

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install_notes.md  justfile  pam_rauthy.toml  proxy.toml  rauthy-pam-nss.toml  selinux-gist.md
install/: install.sh  rauthy-pam-nss.toml
selinux/: nss-rauthy-kvm.mod  nss-rauthy-kvm.pp  nss-rauthy-kvm.te  pam-rauthy-gdm.mod  pam-rauthy-gdm.pp  pam-rauthy-gdm.te  pam-rauthy-local.mod  pam-rauthy-local.pp  pam-rauthy-local.te  pam-rauthy-nss.mod  pam-rauthy-nss.te  pam-rauthy-script.mod  pam-rauthy-script.pp  pam-rauthy-script.te  pam-rauthy-skel.mod  pam-rauthy-skel.pp  pam-rauthy-skel.te  pam-rauthy-ssh.mod  pam-rauthy-ssh.pp  pam-rauthy-ssh.te  pam-rauthy-su  rauthy-nss-uds-access.mod  rauthy-nss-uds-access.pp  rauthy-nss-uds-access.te  rauthy-pam-desktop.pp  rauthy-pam-desktop.te  rauthy-pam-nss.fc  rauthy-pam-nss.mod  rauthy-pam-nss.pp  rauthy-pam-nss.te  rauthy-types.te
selinux-bkp/: pam-rauthy-local.mod  pam-rauthy-local.pp  pam-rauthy-local.te  pam-rauthy-nss.pp  pam-rauthy-ssh.pp  pam-rauthy-ssh.te
selinux/policy_full/: rauthy-pam-nss.fc  rauthy-pam-nss.te
src/: api_types.rs  config.rs  lib.rs
src/nss/: hosts.rs  mod.rs  passwd.rs
src/nss-module/: Cargo.toml
src/nss-module/src/: api_types.rs  lib.rs  uds.rs
src/nss-module/src/nss/: group.rs  hosts.rs  mod.rs  passwd.rs
src/nss-proxy/: Cargo.toml
src/nss-proxy/src/: api_types.rs  cache.rs  config.rs  error.rs  handler.rs  http_client.rs  logging.rs  main.rs  server.rs  test.rs  utils.rs
src/nss-proxy/src/handler/: groups.rs  hosts.rs  mod.rs  users.rs
src/pam/: auth.rs  mod.rs
src/pam-module/: Cargo.toml
src/pam-module/src/: api_types.rs  config.rs  constants.rs  copy_dir.rs  lib.rs
src/pam-module/src/pam/: auth.rs  mod.rs  token.rs  webauthn.rs
src/pam-nss-module/: Cargo.toml
src/pam-nss-module/src/: api_types.rs  config.rs  lib.rs  uds.rs
src/pam-nss-module/src/nss/: group.rs  hosts.rs  mod.rs  passwd.rs  shadow.rs
src/pam-nss-module/src/pam/: auth.rs  token.rs
src/rauthy-authorized-keys/: Cargo.toml
src/rauthy-authorized-keys/src/: config.rs  http_client.rs  logging.rs  main.rs
src/rauthy-nss/: Cargo.toml
src/rauthy-nss/src/: api_types.rs  cache.rs  config.rs  error.rs  groups_local.rs  health_check.rs  http_client.rs  logging.rs  main.rs  server.rs  utils.rs  whoami.rs
src/rauthy-nss/src/handler/: groups.rs  hosts.rs  mod.rs  users.rs
templates/: nsswitch.conf  password-auth  system-auth
templates/authselect/: nsswitch.conf  password-auth  rauthy-nss.service  rauthy-test  system-auth
templates/pam/debian/: common-account  common-auth  common-password  common-session  nsswitch.conf  sshd
templates/pam/rhel/: password-auth  system-auth
templates/session_scripts/: session_close.sh  session_open.sh
templates/systemd/: rauthy-nss.service
