[package]
name = "rauthy-pam-nss"
version = "0.0.1"
edition = "2024"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "GPLv3"

#[profile.release]
#codegen-units = 1
#lto = true
#strip = true
#panic = "abort"

[lib]
name = "rauthy_pam_nss"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2", features = ["serde"] }
chrono = "0.4.41"
libc = "0.2.174"
libnss = "0.9"
log = "0.4.27"
pamsm = { version = "0.5.5", features = ["libpam"] }
reqwest = { version = "0.12.15", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
syslog = "7"
tokio = { version = "1.45.0", features = ["rt"] }
toml = "0.9"
#webauthn-authenticator-rs = { version = "0.5.2", features = ["ctap2", "qrcode", "nfc", "ui-cli", "usb"] }
#webauthn-authenticator-rs = { version = "0.5.2", features = ["ctap2", "qrcode", "mozilla", "nfc", "ui-cli", "usb"] }
webauthn-authenticator-rs = { version = "0.5.2", features = ["qrcode", "mozilla", "nfc", "ui-cli", "usb"] }
webauthn-rs = "0.5.2"
webauthn-rs-core = "0.5.2"
