[workspace]
resolver = "3"
members = ["src/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "GPLv3"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[workspace.dependencies]
axum = { version = "0.8", features = ["http2", "macros"] }
anyhow = "1.0.98"
bincode = { version = "2", features = ["serde"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
flume = "0.11"
futures = "0.3.31"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1.15", features = ["tokio", "server-auto", "http1"] }
libc = "0.2.174"
libnss = "0.9"
log = { version = "0.4.27", features = ["std", "serde"] }
log4rs = "1.3"
openssl = { version = "0.10.73", features = ["vendored"] }
openssl-sys = { version = "0.9.109", features = ["vendored"] }
pamsm = { version = "0.5", features = ["libpam"] }
reqwest = { version = "0.12", features = ["json", "hickory-dns", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
syslog = "7"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
tokio = { version = "1.45.0" }
toml = "0.9"
url = { version = "2.5.4", features = ["serde"] }
#webauthn-authenticator-rs = { version = "0.5.2", features = ["ctap2", "qrcode", "nfc", "ui-cli", "usb"] }
#webauthn-authenticator-rs = { version = "0.5.2", features = ["ctap2", "qrcode", "mozilla", "nfc", "ui-cli", "usb"] }
webauthn-authenticator-rs = { version = "0.5.2", features = ["ctap2", "qrcode", "mozilla", "ui-cli", "usb"] }
webauthn-rs = "0.5.2"
webauthn-rs-core = "0.5.2"
