[package]
name = "rauthy-pam-module"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rauthy_pam"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
pamsm.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt"] }
toml.workspace = true
#webauthn-authenticator-rs = { version = "0.5.2", features = ["ctap2", "qrcode", "nfc", "ui-cli", "usb"] }
#webauthn-authenticator-rs = { version = "0.5.2", features = ["ctap2", "qrcode", "mozilla", "nfc", "ui-cli", "usb"] }
webauthn-authenticator-rs.workspace = true
webauthn-rs.workspace = true
