[package]
name = "rauthy-authorized-keys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking", "hickory-dns", "rustls-tls"] }
serde.workspace = true
toml.workspace = true
