[package]
name = "rauthy-nss"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bincode.workspace = true
flume.workspace = true
chrono.workspace = true
log.workspace = true
log4rs.workspace = true
reqwest.workspace = true
serde.workspace = true
syslog.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
